--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "react-dropdown-tree-select-app",
+  "name": "edi-table",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "array.partial": "^1.0.5",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-infinite-scroll-component": "^5.0.5",
+    "react-scripts": "3.4.1",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
